Fix content alignment of Option, OptionGoup, MenuItem and MenuGroup (#3556)

--- a/packages/core/src/option/Option.css
+++ b/packages/core/src/option/Option.css
@@ -4,12 +4,10 @@
   font-size: var(--salt-text-fontSize);
   font-weight: var(--salt-text-fontWeight);
   min-height: calc(var(--salt-size-base) + var(--salt-spacing-100));
-  padding-left: var(--salt-spacing-100);
-  padding-right: var(--salt-spacing-100);
+  padding: calc(var(--salt-spacing-100) + var(--salt-spacing-25)) var(--salt-spacing-100);
   display: flex;
   gap: var(--salt-spacing-100);
   position: relative;
-  align-items: center;
   cursor: var(--salt-selectable-cursor-hover);
   box-sizing: border-box;
   flex-shrink: 0;
